2013-05-01  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: If the difference between the specified height and
	  the height of the loaded sixel picture is less than 6, they are
	  regarded as the same ones.

	* fb/x_font.c: "% 8" is replaced by "& 7".

	* fb/x_display.c:
	  - "% ppb" is replaced by "& (ppb - 1)".
	  - Tune up FB_SHIFT.

2013-04-30  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: set_wall_picture() isn't called in window_realized()
	  if the window is unmapped (== not resized to the screen size yet)
	  in framebuffer.

	* fb/x_imagelib.c: load_sixel_1bpp_from_file() is added to tune up
	  loading sixel graphics in 1bpp framebuffer.

	* c_imagelib.c: load_sixel_from_file() returns 1bpp bitmap data if
	  SIXEL_1BPP is defined.

2013-04-28  Araki Kenaaaaa  <arakiken@users.sf.net>

	* im_scim_mod_if.c: Fixed typo(?).

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c: The value of WSKBD environmental variable is used for
	  the keyboard device.

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* x_display.c: Tune up drawing the wall picture in put_image_to_124bpp()
	  and x_display_get_pixel().

	* x_display.c, x_font.c: TOINT32 and TOINT16 macros are used to access
	  fb and pcf fonts.

	* kik_util.h: BE32DEC, BE16DEC, LE32DEC, LE16DEC, TOINT32 and TOINT16
	  macros are added.

2013-04-27  Araki Ken  <arakiken@users.sf.net>

	* mlimgloader/Makefile.in: mlimgloader can be built without X11 library.

	* configure.in, mlcc/Makefile.in: configure script at the top directory
	  generates Makefile of mlcc.

	* mlcc/configure, mlcc/configure.in, mlcc/config.h.in, mlcc/install-sh:
	  Removed.

2013-04-22  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja, gtk/INSTALL: Updated.

	* x_screen.c, x_window.h, xlib/x_window.c, win32/x_window.c, fb/x_window.c:
	  - "bel_mode" option accepts "sound|visual" value which enables both audible
	    and visual bell.