@@ -1,5 +1,6 @@
 ver 3.2.0
 * Support framebuffer on NetBSD. (Experimental)
+  (Thanks to @tsutsuii san)
 * Support sixel graphics and wall pictures in 8 bpp framebuffer.
 * Add "use_urgent_bell" option which is equivalent to "bellIsUrgent" option of
   xterm and support CSI ? 1042.
