@@ -36,8 +36,8 @@ u_long  x_display_get_pixel( Display *  display , int  x , int  y) ;
 void  x_display_put_image( Display *  display , int  x , int  y ,
 		u_char *  image , size_t  width) ;
 
-void  x_display_copy_line( Display *  display , int  src_x , int  src_y ,
-		int  dst_x , int  dst_y , u_int  width) ;
+void  x_display_copy_lines( Display *  display , int  src_x , int  src_y ,
+		int  dst_x , int  dst_y , u_int  width , u_int  height) ;
 
 void  x_display_expose( int  x , int  y , u_int  width , u_int  height) ;
 
